--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "laravue-music-app-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,8 +16,10 @@
     "postcss": "^8",
     "register-service-worker": "^1.7.2",
     "tailwindcss": "^3",
+    "vee-validate": "^4.8.6",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
