--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "aplayer": "^1.10.1",
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
     "postcss": "^8",
