--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tailwindcss": "^3",
     "vee-validate": "^4.8.6",
     "vue": "^3.2.13",
+    "vue-advanced-cropper": "^2.8.8",
     "vue-router": "^4.0.3",
     "yup": "^1.1.1"
   },
