--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10",
     "axios": "^1.3.6",
     "core-js": "^3.8.3",
+    "dotenv": "^16.0.3",
     "pinia": "^2.0.35",
     "postcss": "^8",
     "register-service-worker": "^1.7.2",
