--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.8.3",
     "dotenv": "^16.0.3",
     "js-cookie": "^3.0.4",
+    "laravel-vue-pagination": "^4.1.0",
     "pinia": "^2.0.35",
     "postcss": "^8",
     "register-service-worker": "^1.7.2",
