--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-VUE_APP_URL=http://localhost:8080
-VUE_APP_API_URL=http://localhost:8000/api
+VITE_APP_URL = http://localhost:8080
+VITE_APP_API_URL=http://localhost:8000/api
