--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "aplayer": "^1.10.1",
     "autoprefixer": "^10",
     "axios": "^1.3.6",
+    "crypto-js": "^4.1.1",
     "js-cookie": "^3.0.4",
     "laravel-vue-pagination": "^4.1.0",
     "pinia": "^2.0.35",
     "postcss": "^8",
     "register-service-worker": "^1.7.2",
     "tailwindcss": "^3",
+    "uuid": "^9.0.0",
     "vee-validate": "^4.8.6",
     "vue": "^3.2.13",
     "vue-advanced-cropper": "^2.8.8",
